use the proper branches to test CoreUI v4

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "php": "^8.0",
         "laravel/framework": "^9.0",
         "digitallyhappy/assets": "dev-bassets as 2.99.99",
-        "backpack/crud": "v6.x-dev as 5.99.99",
-        "backpack/pro": "v6.x-dev as 1.99.99",
+        "backpack/crud": "dev-bootstrap5-theme-coreui-v4-legacy as 5.99.99",
+        "backpack/pro": "dev-bootstrap5 as 1.99.99",
         "backpack/logmanager": "^4.0",
         "backpack/settings": "^3.0",
         "backpack/newscrud": "^4.0",
