--- a/composer.json
+++ b/composer.json
@@ -6,25 +6,27 @@
     "type": "project",
     "require": {
         "php": "^8.1",
-        "laravel/framework": "^9.0",
-        "backpack/crud": "^5.1",
+        "laravel/framework": "^10.0",
+        "backpack/crud": "dev-laravel-v10 as 5.4.99",
         "backpack/logmanager": "^4.0",
         "backpack/settings": "^3.0",
-        "backpack/newscrud": "^4.0",
         "backpack/permissionmanager": "^6.0",
-        "backpack/pagemanager": "^3.0",
-        "backpack/menucrud": "^3.0",
-        "spatie/laravel-translatable": "^5.0",
+        "spatie/laravel-translatable": "^6.0",
         "laravel/tinker": "^2.1",
-        "spatie/laravel-ignition": "^1.0",
+        "spatie/laravel-ignition": "^2.0",
         "intervention/image": "^2.3",
-        "backpack/revise-operation": "^1.0",
         "consoletvs/charts": "6.*",
         "laravel/legacy-factories": "^1.0",
-        "mews/purifier": "^3.3",
         "backpack/filemanager": "^2.0",
         "backpack/backupmanager": "^3.0",
-        "backpack/editable-columns": "^2.0"
+        "backpack/editable-columns": "^2.0",
+        "backpack/pro": "^1.6",
+        "cviebrock/eloquent-sluggable": "dev-l10-compatibility as 9.9.99",
+        "venturecraft/revisionable": "dev-patch-1 as 1.1.99",
+        "backpack/newscrud": "^4.0",
+        "backpack/menucrud": "^3.0",
+        "backpack/revise-operation": "^1.0"
+        
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
@@ -32,11 +34,18 @@
         "phpunit/phpunit" : "^9.0||^8.5||^7.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "^5.0.2|3.0.*|2.8.*",
-        "laracasts/generators": "^2.0",
         "backpack/generators": "^3.1",
         "barryvdh/laravel-debugbar": "^3.2"
     },
     "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/laravel-shift/eloquent-sluggable.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/pxpm/revisionable.git"
+        },
         {
             "type": "composer",
             "url": "https://repo.backpackforlaravel.com/"
