--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "backpack/filemanager": "^2.0",
         "backpack/backupmanager": "^3.0",
         "backpack/editable-columns": "^2.0",
-        "spatie/laravel-medialibrary": "^10.7"
+        "spatie/laravel-medialibrary": "^10.7",
+        "backpack/media-library-uploads": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
@@ -41,6 +42,10 @@
         {
             "type": "composer",
             "url": "https://repo.backpackforlaravel.com/"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Laravel-Backpack/media-library-uploads/"
         }
     ],
     "autoload": {
@@ -73,8 +78,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postInstall"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan vendor:publish --provider=\"Backpack\\CRUD\\BackpackServiceProvider\" --tag=public --force"
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
