--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         "mews/purifier": "^3.3",
         "backpack/filemanager": "^2.0",
         "backpack/backupmanager": "^3.0",
-        "backpack/editable-columns": "^2.0"
+        "backpack/editable-columns": "^2.0",
+        "backpack/theme-coreuiv2": "dev-main",
+        "backpack/theme-coreuiv4": "dev-main",
+        "backpack/theme-tabler": "dev-main"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
@@ -36,14 +39,27 @@
         "symfony/dom-crawler": "^5.0.2|3.0.*|2.8.*",
         "laracasts/generators": "^2.0",
         "backpack/generators": "^3.1",
-        "barryvdh/laravel-debugbar": "^3.2"
+        "barryvdh/laravel-debugbar": "^3.2",
+        "jeroen-g/laravel-packager": "^2.8"
     },
-    "repositories": [
-        {
+    "repositories": {
+        "backpack/theme-coreuiv2": {
+            "type": "vcs",
+            "url": "https://github.com/Laravel-Backpack/theme-coreuiv2.git"
+        },
+        "backpack/theme-coreuiv4": {
+            "type": "vcs",
+            "url": "https://github.com/Laravel-Backpack/theme-coreuiv4.git"
+        },
+        "backpack/theme-tabler": {
+            "type": "vcs",
+            "url": "https://github.com/Laravel-Backpack/theme-tabler.git"
+        },
+        "0": {
             "type": "composer",
             "url": "https://repo.backpackforlaravel.com/"
         }
-    ],
+    },
     "autoload": {
         "files": [
             "app/helpers.php"
