--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
+BACKPACK_THEME=backpack.theme-coreuiv4
+
 # MySQL Database Connection
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
