--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "^9.0",
         "backpack/crud": "v6.x-dev as 5.99.99",
         "backpack/pro": "v6.x-dev as 1.99.99",
-        "backpack/filemanager": "v6.x-dev as 2.99.99",
+        "backpack/filemanager": "^2.0",
         "backpack/theme-coreuiv2": "dev-main",
         "backpack/theme-coreuiv4": "dev-main",
         "backpack/theme-tabler": "dev-main",
