Support for Vertical Transparent layout

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
-BACKPACK_THEME=backpack.theme-coreuiv4
+BACKPACK_THEME=backpack.theme-tabler
 
 # MySQL Database Connection
 DB_CONNECTION=mysql
