--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "^5.0.2|3.0.*|2.8.*",
         "backpack/generators": "v6.x-dev",
-        "barryvdh/laravel-debugbar": "^3.2",
-        "backpack/devtools": "v6.x-dev"
+        "barryvdh/laravel-debugbar": "^3.2"
     },
     "repositories": {
         "backpack/theme-coreuiv2": {
