--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
         "laravel/framework": "^10.0",
         "backpack/crud": "v6.x-dev as 5.99.99",
         "backpack/pro": "v6.x-dev as 1.99.99",
-        "backpack/filemanager": "^2.0",
+        "backpack/filemanager": "v6.x-dev as 3.9.99",
         "backpack/theme-coreuiv2": "dev-main",
         "backpack/theme-coreuiv4": "dev-main",
         "backpack/theme-tabler": "dev-main",
-        "backpack/logmanager": "^4.0",
+        "backpack/logmanager": "v6.x-dev as 5.9.99",
         "backpack/settings": "^3.0",
         "backpack/newscrud": "^4.0",
         "backpack/permissionmanager": "v6.x-dev as 6.9.99",
@@ -27,7 +27,7 @@
         "consoletvs/charts": "6.*",
         "laravel/legacy-factories": "^1.0",
         "mews/purifier": "^3.3",
-        "backpack/backupmanager": "^4.0",
+        "backpack/backupmanager": "v6.x-dev as 5.9.99",
         "backpack/editable-columns": "^2.0"
     },
     "require-dev": {
