use backpack v6 launched

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^10.0",
-        "backpack/crud": "v6.x-dev as 6.0.0",
+        "backpack/crud": "^6.0",
         "backpack/pro": "^2.0",
         "backpack/filemanager": "^3.0",
         "backpack/theme-coreuiv2": "^1.0",
