--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "intervention/image": "^2.3",
         "consoletvs/charts": "6.*",
         "laravel/legacy-factories": "^1.0",
-        "mews/purifier": "^3.3"
+        "mews/purifier": "^3.3",
+        "league/flysystem-aws-s3-v3": "3.0"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
