--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^10.0",
-        "backpack/activity-log": "dev-main",
         "backpack/crud": "^6.0",
         "backpack/pro": "^2.0",
         "backpack/filemanager": "^3.0",
@@ -32,7 +31,9 @@
         "consoletvs/charts": "6.*",
         "laravel/legacy-factories": "^1.0",
         "mews/purifier": "^3.3",
-        "league/flysystem-aws-s3-v3": "^3.0"
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "laravel-backpack/activity-log": "v6"
+
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
@@ -47,6 +48,10 @@
         "0": {
             "type": "composer",
             "url": "https://repo.backpackforlaravel.com/"
+        },
+        "1": {
+            "type": "git",
+            "url": "https://github.com/laravel-backpack/activity-log"
         }
     },
     "autoload": {
