--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^10.0",
+        "backpack/activity-log": "v6.x-dev",
         "backpack/crud": "^6.0",
         "backpack/pro": "^2.0",
         "backpack/filemanager": "^3.0",
@@ -31,9 +32,7 @@
         "consoletvs/charts": "6.*",
         "laravel/legacy-factories": "^1.0",
         "mews/purifier": "^3.3",
-        "league/flysystem-aws-s3-v3": "^3.0",
-        "laravel-backpack/activity-log": "v6"
-
+        "league/flysystem-aws-s3-v3": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
