--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,9 @@
     "require-dev": {
         "fakerphp/faker": "~1.4",
         "mockery/mockery": "1.6.*",
-        "phpunit/phpunit" : "^10.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "^5.0.2|3.0.*|2.8.*",
+        "phpunit/phpunit" : "^11",
+        "symfony/css-selector": "2.8.*|3.0.*|^4|^5|^6|^7",
+        "symfony/dom-crawler": "2.8.*|3.0.*|^5|^6|^7",
         "backpack/generators": "^4.0",
         "barryvdh/laravel-debugbar": "^3.2"
     },
