ran composer update

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "backpack/menucrud": "^4.0",
         "backpack/backupmanager": "^5.0",
         "backpack/revise-operation": "^2.0",
-        "backpack/editable-columns": "^2.0|^3.0",
+        "backpack/editable-columns": "^3.0",
         "backpack/medialibrary-uploaders": "^1.0",
         "spatie/laravel-translatable": "^6.0",
         "laravel/tinker": "^2.1",
@@ -39,8 +39,8 @@
         "fakerphp/faker": "~1.4",
         "mockery/mockery": "1.6.*",
         "phpunit/phpunit" : "^11",
-        "symfony/css-selector": "2.8.*|3.0.*|^4|^5|^6|^7",
-        "symfony/dom-crawler": "2.8.*|3.0.*|^5|^6|^7",
+        "symfony/css-selector": "^7",
+        "symfony/dom-crawler": "^7",
         "backpack/generators": "^4.0",
         "barryvdh/laravel-debugbar": "^3.2"
     },
