--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "scripts": {
