added PAN Backpack add-on for product analytics

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "mews/purifier": "^3.4",
         "spatie/laravel-ignition": "^2.0",
-        "spatie/laravel-translatable": "^6.0"
+        "spatie/laravel-translatable": "^6.0",
+        "backpack/pan-panel": "dev-main"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
@@ -49,6 +50,10 @@
         {
             "type": "composer",
             "url": "https://repo.backpackforlaravel.com/"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Laravel-Backpack/pan-panel.git"
         }
     ],
     "autoload": {
