require next version of CRUD, PRO and medialibrary-uploaders

--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,20 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0",
+        "backpack/crud": "dev-next as 6.99.99",
+        "backpack/pro": "dev-next as 2.9.99",
+        "backpack/medialibrary-uploaders": "dev-next as 1.99.99",
         "backpack/activity-log": "^2.0.3",
         "backpack/backupmanager": "^5.0",
         "backpack/calendar-operation": "^1.0",
-        "backpack/crud": "^6.7",
         "backpack/editable-columns": "^3.0",
         "backpack/filemanager": "^3.0",
         "backpack/language-switcher": "^2.0",
         "backpack/logmanager": "^5.0",
-        "backpack/medialibrary-uploaders": "^1.0",
         "backpack/menucrud": "^4.0",
         "backpack/newscrud": "^5.0",
         "backpack/pagemanager": "^3.0",
         "backpack/permissionmanager": "^7.0",
-        "backpack/pro": "^2.0",
         "backpack/revise-operation": "^2.0",
         "backpack/settings": "^3.1",
         "backpack/theme-coreuiv2": "^1.0",
