--- a/composer.json
+++ b/composer.json
@@ -13,28 +13,28 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0",
-        "backpack/crud": "dev-next as 6.99.99",
-        "backpack/pro": "dev-next as 2.9.99",
+        "backpack/crud": "7.0.0-alpha.1",
+        "backpack/pro": "3.0.0-alpha.2",
         "backpack/medialibrary-uploaders": "dev-next as 1.99.99",
-        "backpack/ckeditor-field": "dev-main as 1.0.0",
-        "backpack/tinymce-field": "dev-main as 1.0.0",
-        "backpack/activity-log": "^2.0.3",
-        "backpack/backupmanager": "^5.0",
-        "backpack/calendar-operation": "^1.0",
-        "backpack/editable-columns": "^3.0",
+        "backpack/ckeditor-field": "dev-next as 1.0.0",
+        "backpack/tinymce-field": "dev-next as 1.0.0",
+        "backpack/activity-log": "dev-next as 1.0.0",
+        "backpack/backupmanager": "dev-next as 6.0",
+        "backpack/calendar-operation": "dev-next as 1.0.0",
+        "backpack/editable-columns": "dev-next as 1.0.0",
         "backpack/filemanager": "dev-next as 3.99.99",
-        "backpack/language-switcher": "^2.0",
-        "backpack/logmanager": "^5.0",
-        "backpack/menucrud": "^4.0",
-        "backpack/newscrud": "^5.0",
-        "backpack/pagemanager": "^3.0",
-        "backpack/permissionmanager": "^7.0",
-        "backpack/revise-operation": "^2.0",
-        "backpack/settings": "^3.1",
-        "backpack/theme-coreuiv2": "^1.0",
-        "backpack/theme-coreuiv4": "^1.0",
-        "backpack/theme-tabler": "^1.0",
-        "backpack/translation-manager": "^1.0",
+        "backpack/language-switcher": "dev-next as 3.99.99",
+        "backpack/logmanager": "dev-next as 3.99.99",
+        "backpack/menucrud": "dev-next as 3.99.99",
+        "backpack/newscrud": "dev-next as 3.99.99",
+        "backpack/pagemanager": "dev-next as 3.99.99",
+        "backpack/permissionmanager": "dev-next as 3.99.99",
+        "backpack/revise-operation": "dev-next as 3.99.99",
+        "backpack/settings": "dev-next as 3.99.99",
+        "backpack/theme-coreuiv2": "dev-next as 3.99.99",
+        "backpack/theme-coreuiv4": "dev-next as 3.99.99",
+        "backpack/theme-tabler": "dev-next as 3.99.99",
+        "backpack/translation-manager": "dev-next as 3.99.99",
         "consoletvs/charts": "6.*",
         "intervention/image": "^2.3",
         "laravel/legacy-factories": "^1.0",
@@ -43,7 +43,7 @@
         "mews/purifier": "^3.4",
         "spatie/laravel-ignition": "^2.0",
         "spatie/laravel-translatable": "^6.0",
-        "backpack/pan-panel": "^1.0"
+        "backpack/pan-panel": "dev-next as 3.99.99"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
@@ -51,7 +51,7 @@
         "phpunit/phpunit": "^11",
         "symfony/css-selector": "^7",
         "symfony/dom-crawler": "^7",
-        "backpack/generators": "^4.0",
+        "backpack/generators": "dev-next as 3.99.99",
         "barryvdh/laravel-debugbar": "^3.2"
     },
     "repositories": [
