--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     "type": "project",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.0",
-        "backpack/crud": "7.0.0-alpha.1",
-        "backpack/pro": "3.0.0-alpha.2",
+        "laravel/framework": "^12.0",
+        "backpack/crud": "^7.0.0-alpha",
+        "backpack/pro": "^3.0.0-alpha",
         "backpack/medialibrary-uploaders": "dev-next as 1.99.99",
         "backpack/ckeditor-field": "dev-next as 1.0.0",
         "backpack/tinymce-field": "dev-next as 1.0.0",
