--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,12 @@ APP_URL=http://localhost
 BACKPACK_THEME=backpack.theme-tabler
 
 # MySQL Database Connection
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=homestead
+#DB_USERNAME=homestead
+#DB_PASSWORD=secret
 
 # PostgreSQL Database Connection
 #DB_CONNECTION=pgsql
@@ -22,9 +22,9 @@ DB_PASSWORD=secret
 #DB_PASSWORD=
 
 # SQLite Database Connection
-# You might also need to run 'touch storage/app/database.sqlite`  to create the db
-#DB_CONNECTION=sqlite
-#DB_DATABASE=../storage/app/database.sqlite
+# You might also need to run 'touch storage/app/database.sqlite`  to create the db if the file does not exist.
+DB_CONNECTION=sqlite
+DB_DATABASE=./storage/app/database.sqlite
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
