--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "mews/purifier": "^3.4",
         "spatie/laravel-ignition": "^2.0",
         "spatie/laravel-translatable": "^6.0",
-        "backpack/pan-panel": "dev-next as 3.99.99"
+        "backpack/pan-panel": "dev-next as 3.99.99",
+        "backpack/dataform-modal": "dev-main as 1.0.0"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
@@ -58,6 +59,10 @@
         {
             "type": "composer",
             "url": "https://repo.backpackforlaravel.com/"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Laravel-Backpack/dataform-modal.git"
         }
     ],
     "autoload": {
