--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,9 @@
         "backpack/permissionmanager": "^7.3",
         "backpack/revise-operation": "^2.1",
         "backpack/settings": "^3.2",
-        "backpack/theme-coreuiv2": "dev-next as 3.99.99",
+        "backpack/theme-coreuiv2": "^2.0",
         "backpack/theme-coreuiv4": "^1.2",
-        "backpack/theme-tabler": "dev-next as 3.99.99",
+        "backpack/theme-tabler": "^2.0",
         "backpack/translation-manager": "^1.1",
         "consoletvs/charts": "6.*",
         "intervention/image": "^2.3",
