--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "backpack/crud": "dev-next as 7.0.0",
+        "backpack/crud": "^7.0",
         "backpack/pro": "^3.0",
         "backpack/medialibrary-uploaders": "^2.0",
         "backpack/ckeditor-field": "^1.0",
